--- a/public/index.html
+++ b/public/index.html
@@ -1,212 +1,227 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Alec Justice</title>
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Raleway:200,300,400,500,600,700,800" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  </head>
-  <body>
 
-    <!-- BEGIN NAVBAR -->
-    <div class="navbar">
-      <a href="#about">About</a>
-      <a href="#skills">Skills</a>
-      <a href="#education">Education</a>
-      <a href="#projects">Projects</a>
-      <a href="#contact">Contact</a>
+<head>
+  <meta charset="utf-8">
+  <title>Alec Justice</title>
+  <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Raleway:200,300,400,500,600,700,800" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+
+<body>
+
+  <!-- BEGIN NAVBAR -->
+  <div class="navbar">
+    <a href="#about">About</a>
+    <a href="#skills">Skills</a>
+    <a href="#education">Education</a>
+    <a href="#projects">Projects</a>
+    <a href="#contact">Contact</a>
+  </div>
+  <!-- END NAVBAR -->
+
+  <div class="container">
+
+    <!-- HEADER -->
+    <div class="jumbotron">
+      <div class="jumbotron-text">
+        <h1>Alec Justice</h1>
+        <p>Software Developer in Birmingham, Al.</p>
+      </div>
+      <div class="jumbotron-social">
+        <ul class="ul-social">
+          <li class="li-social-links">
+            <a class="social" href="https://github.com/alec-justice/" target="_blank"><i class="fa fa-github"
+                aria-hidden="true"></i></a>
+          </li>
+          <li class="li-social-links">
+            <a class="social" href="https://www.linkedin.com/in/alec-justice-5340a7aa/" target="_blank"><i
+                class="fa fa-linkedin" aria-hidden="true"></i></a>
+          </li>
+        </ul>
+      </div>
+      <div id="down-arrow">
+        <span><a href="#about"><i class="fa fa-chevron-down" aria-hidden="true"></i></a></span>
+      </div>
     </div>
-    <!-- END NAVBAR -->
+    <!-- END HEADER -->
 
-    <div class="container">
 
-      <!-- HEADER -->
-      <div class="jumbotron">
-        <div class="jumbotron-text">
-          <h1>Alec Justice</h1>
-          <p>Software Developer in Birmingham, Al.</p>
+
+    <!-- BEGIN ABOUT -->
+    <div class="row white box-shadow">
+      <div class="side-content"></div>
+      <div class="main-content">
+        <div class="content-header">
+          <a class="anchor" name="about"></a>
+          <h2>About</h2>
         </div>
-        <div class="jumbotron-social">
-          <ul class="ul-social">
-            <li class="li-social-links">
-              <a class="social" href="https://github.com/alec-justice/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
-            </li>
-            <li class="li-social-links">
-              <a class="social" href="https://www.linkedin.com/in/alec-justice-5340a7aa/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-            </li>
+        <div class="content-body">
+          <p id="about">Not loyal to any certain stack. I'm willing to use my current skills and adapt them to fit the
+            role of the right position.</p>
+          <p id="about">I'm a true team player with a lot of determination. I am currently seeking a career with a great
+            company I can call home. </p>
+        </div>
+      </div>
+      <div class="side-content"></div>
+    </div>
+    <!-- END ABOUT -->
+
+    <!-- BEGIN SKILLS -->
+    <div class="row white box-shadow">
+      <div class="side-content"></div>
+      <div class="main-content">
+        <div class="content-header">
+          <a class="anchor" name="skills"></a>
+          <h2>Skills</h2>
+        </div>
+        <div class="content-body">
+          <ul class="ul-skills">
+            <li class="li-skills">Javascript</li>
+            <li class="li-skills">Node.js</li>
+            <li class="li-skills">Express.js</li>
+            <li class="li-skills">Java</li>
+            <li class="li-skills">HTML</li>
+            <li class="li-skills">CSS</li>
+            <li class="li-skills">SQL</li>
           </ul>
         </div>
-        <div id="down-arrow">
-          <span><a href="#about"><i class="fa fa-chevron-down" aria-hidden="true"></i></a></span>
-        </div>
       </div>
-      <!-- END HEADER -->
-
-
-
-      <!-- BEGIN ABOUT -->
-      <div class="row white box-shadow">
-        <div class="side-content"></div>
-        <div class="main-content">
-          <div class="content-header">
-            <a class="anchor" name="about"></a>
-            <h2>About</h2>
-          </div>
-          <div class="content-body">
-            <p id="about">Not loyal to any certain stack. I'm willing to use my current skills and adapt them to fit the role of the right position.</p>
-            <p id="about">I'm a true team player with a lot of determination. I am currently seeking a career with a great company I can call home. </p>
-          </div>
-        </div>
-        <div class="side-content"></div>
-      </div>
-      <!-- END ABOUT -->
-
-      <!-- BEGIN SKILLS -->
-      <div class="row white box-shadow">
-        <div class="side-content"></div>
-        <div class="main-content">
-          <div class="content-header">
-            <a class="anchor" name="skills"></a>
-            <h2>Skills</h2>
-          </div>
-          <div class="content-body">
-            <ul class="ul-skills">
-              <li class="li-skills">Javascript</li>
-              <li class="li-skills">HTML</li>
-              <li class="li-skills">CSS</li>
-              <li class="li-skills">Bootstrap</li>
-              <li class="li-skills">Node.js</li>
-              <li class="li-skills">Express.js</li>
-              <li class="li-skills">SQL</li>
-              <li class="li-skills">Java</li>
-            </ul>
-          </div>
-        </div>
-        <div class="side-content"></div>
-      </div>
-      <!-- END SKILLS -->
-
-      <!-- BEGIN EDUCATION -->
-      <div class="row white box-shadow">
-        <div class="side-content"></div>
-        <div class="main-content">
-          <div class="content-header">
-            <a class="anchor" name="education"></a>
-            <h2>Education</h2>
-          </div>
-          <div class="content-body">
-
-            <!-- EDUCATION 1 -->
-            <div class="card">
-              <div class="card-header">
-                <h4>Innovate Birmingham<span class="job-title">2019</span></h4>
-              </div>
-              <div class="card-content">
-                <p>IAmBham - Web Development Bootcamp</p>
-              </div>
-            </div>
-            <!-- EDUCATION 2 -->
-            <div class="card">
-              <div class="card-header">
-                <h4>The University of Alabama <span class="job-title">2012 - 2016</span></h4>
-              </div>
-              <div class="card-content">
-                <p>BS in Commerce and Business Administration<br>Major: Marketing<br>Concentration: Entrepreneurship</p>
-              </div>
-            </div>
-
-          </div>
-        </div>
-        <div class="side-content"></div>
-      </div>
-      <!-- END EDUCATION -->
-
-      <!-- BEGIN PROJECTS -->
-      <div class="row">
-        <div class="side-content-sm"></div>
-        <div class="main-content-lg">
-          <div class="content-header">
-            <a class="anchor" name="projects"></a>
-            <h2>Projects</h2>
-          </div>
-          <div class="content-body">
-            <!-- CARD #1 -->
-            <div class="project-card">
-              <div class="project-image">
-                <img src="http://placehold.it/250x350">
-              </div>
-              <div class="project-content">
-                <h4>Project Name</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                <a href="#">View Source Code</a>
-              </div>
-            </div>
-            <!-- CARD #2 -->
-            <div class="project-card">
-              <div class="project-image">
-                <img src="http://placehold.it/250x350">
-              </div>
-              <div class="project-content">
-                <h4>Project Name</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                <a href="#">View Source Code</a>
-              </div>
-            </div>
-            <!-- CARD #3 -->
-            <div class="project-card">
-              <div class="project-image">
-                <img src="http://placehold.it/250x350">
-              </div>
-              <div class="project-content">
-                <h4>Project Name</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                <a href="#">View Source Code</a>
-              </div>
-            </div>
-
-          </div>
-        </div>
-        <div class="side-content-sm"></div>
-      </div>
-      <!-- END PROJECTS -->
-
-      <!-- BEGIN CONTACT -->
-
-      <div class="row blue">
-        <div class="side-content"></div>
-        <div class="main-content">
-          <div class="content-header">
-            <a class="anchor" name="contact"></a>
-            <h2 class="white-text">Contact Me</h2>
-          </div>
-          <div class="contact content-body">
-            <form method="POST" action="mailto:alec.justice2017@gmail">
-                <input type="hidden" name="_subject" value="Contact request from personal website" />
-                <input type="email" name="_replyto" placeholder="Your email" required>
-                <textarea name="message" placeholder="Your message" required></textarea>
-                <button type="submit" value="Send Email">Send</button>
-            </form>
-          </div>
-        </div>
-        <div class="side-content"></div>
-      </div>
-      <!-- END CONTACT -->
-
-      <!-- BEGIN FOOTER -->
-      <div class="row">
-        <div class="side-content"></div>
-        <div class="main-content">
-          <div class="content-header">
-          </div>
-          <div class="content-body">
-            <p>Copyright Alec Justice 2019</p>
-          </div>
-        </div>
-        <div class="side-content"></div>
-      </div>
-      <!-- END FOOTER -->
-
+      <div class="side-content"></div>
     </div>
-  </body>
+    <!-- END SKILLS -->
+
+    <!-- BEGIN EDUCATION -->
+    <div class="row white box-shadow">
+      <div class="side-content"></div>
+      <div class="main-content">
+        <div class="content-header">
+          <a class="anchor" name="education"></a>
+          <h2>Education</h2>
+        </div>
+        <div class="content-body">
+
+          <!-- EDUCATION 1 -->
+          <div class="card">
+            <div class="card-header">
+              <h4>Innovate Birmingham<span class="job-title">2019</span></h4>
+            </div>
+            <div class="card-content">
+              <p>IAmBham - Web Development Bootcamp</p>
+              <p>Certificate in Software Development</p>
+            </div>
+          </div>
+          <!-- EDUCATION 2 -->
+          <div class="card">
+            <div class="card-header">
+              <h4>The University of Alabama <span class="job-title">2012 - 2016</span></h4>
+            </div>
+            <div class="card-content">
+              <p>BS in Commerce and Business Administration<br>Major: Marketing<br>Concentration: Entrepreneurship</p>
+            </div>
+          </div>
+
+        </div>
+      </div>
+      <div class="side-content"></div>
+    </div>
+    <!-- END EDUCATION -->
+
+    <!-- BEGIN PROJECTS -->
+    <div class="row">
+      <div class="side-content-sm"></div>
+      <div class="main-content-lg">
+        <div class="content-header">
+          <a class="anchor" name="projects"></a>
+          <h2>Projects</h2>
+        </div>
+        <div class="content-body">
+          <!-- CARD #1 -->
+          <div class="project-card">
+            <div class="project-image">
+              <img src="../Success-Kid.jpg">
+            </div>
+            <div class="project-content">
+              <h4>Meme Generator</h4>
+              <p>This is a fun little project I did to show my skills using React and pulling from an API to generate a
+                random meme image where you can create you own funny memes.</p>
+              <a href="https://github.com/alec-justice/React---Meme-Generator">View Source Code</a>
+            </div>
+          </div>
+          <!-- CARD #2 -->
+          <div class="project-card">
+            <div class="project-image">
+              <img src="../RGB-color-additive-model.jpg">
+            </div>
+            <div class="project-content">
+              <h4>RGB Color Guessing Game</h4>
+              <p>Using simply HTML, CSS, and Javascript, I created this color guessing game to test your knowledge of
+                RGB color combinations. Can you guess the correct color on the first try?</p>
+              <a href="https://github.com/alec-justice/RGB-Color-Guessing-Game">View Source Code</a>
+            </div>
+          </div>
+          <!-- CARD #3 -->
+          <div class="project-card">
+            <div class="project-image">
+              <img src="../polygon-thumbs-2A.0.jpg">
+            </div>
+            <div class="project-content">
+              <h4>Flappy Jump</h4>
+              <p>I created this variation of the hit mobile game "Flappy Bird" as a way to learn the Java programming
+                language. Can you beat my highscore of 26?</p>
+              <a href="#">View Source Code</a>
+            </div>
+          </div>
+
+        </div>
+      </div>
+      <div class="side-content-sm"></div>
+    </div>
+    <!-- END PROJECTS -->
+
+    <!-- BEGIN CONTACT -->
+
+    <div class="row blue">
+      <div class="side-content"></div>
+      <div class="main-content">
+        <div class="content-header">
+          <a class="anchor" name="contact"></a>
+          <h2 class="white-text">Contact Me</h2>
+        </div>
+        <div class="contact content-body">
+          <form method="POST" action="mailto:alec.justice2017@gmail">
+            <input type="hidden" name="_subject" value="Contact request from personal website" />
+            <input type="email" name="_replyto" placeholder="Your email" required>
+            <textarea name="message" placeholder="Your message" required></textarea>
+            <button type="submit" value="Send Email">Send</button>
+          </form>
+        </div>
+        <br><br>
+        <div class="myInfo">
+          <p>alec.justice2017@gmail.com</p>
+          <p>205-356-5234</p>
+        </div>
+      </div>
+      <div class="side-content"></div>
+    </div>
+    <!-- END CONTACT -->
+
+    <!-- BEGIN FOOTER -->
+    <div class="row">
+      <div class="side-content"></div>
+      <div class="main-content">
+        <div class="content-header">
+        </div>
+        <div class="content-body">
+          <p>Copyright Alec Justice 2019</p>
+        </div>
+      </div>
+      <div class="side-content"></div>
+    </div>
+    <!-- END FOOTER -->
+
+  </div>
+</body>
+
 </html>
